# TG_bot_live_city

./: .env  .env.template  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  readme.md  settings.py
botAPI/: core.py
botAPI/utils/: command_custom.py  command_help.py  command_high.py  command_history.py
db/: core.py
siteAPI/: core.py
