[tool.poetry]
name = "tg-bot-live-city"
version = "0.1.0"
description = ""
authors = ["VitalyShpakovsky <vitalik1987autoexp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.12.0"
requests = "^2.31.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
webdriver-manager = "^4.0.0"
pytelegrambotapi = "^4.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
